<resources>
    <string name="app_name">Shiksha Mitra</string>
    <string name="session_no_day">No. of session (Day) * </string>
    <string name="retail_shop_or_outlet_name">Retail Shop / Outlet name *</string>
    <string name="remarks_if_any">Remarks if any</string>
    <string name="photo_of_students_with_sm_holding_hw_samples">Photo of students &amp; SM holding HW samples *</string>
    <string name="photo_of_students_getting_rewarded_4">Photo of students getting rewarded - 4 *</string>
    <string name="photo_of_students_getting_rewarded_3">Photo of students getting rewarded - 3 *</string>
    <string name="photo_of_students_getting_rewarded_2">Photo of students getting rewarded - 2 *</string>
    <string name="photo_of_students_getting_rewarded_1">Photo of students getting rewarded - 1 *</string>
    <string name="photo_of_quiz_in_progress_2">Photo of quiz in progress 2 *</string>
    <string name="name_of_the_students">No. of students attended *</string>
    <string name="photograph_of_school_facade_exterior">Photograph of school facade / exterior *</string>
    <string name="name_of_the_school_being_visited">Name of the school being visited *</string>
    <string name="contact_person">Contact person\'s name *</string>
    <string name="shop_contact_person_phone_number">Shop / Contact person phone number*</string>
    <string name="village">Village</string>
    <string name="block">Block*</string>
    <string name="district">District*</string>
    <string name="pin_code">Pin code*</string>
    <string name="state">State*</string>
    <string name="competitors_products_available">Competitor brand available</string>
    <string name="interested_in_selling_savlon_handwash">Interested in selling \'Savlon Handwash\'*</string>
    <string name="handwash_pouches_sold">No. of handwash pouches sold*</string>
    <string name="savlon_soap_sold">No. of savlon soap sold*</string>
    <string name="capture">Capture</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="username">Username/Mobile No</string>
    <string name="password">Password</string>
    <string name="data_saved_message">Data saved successfully.</string>
    <string name="latitude">Latitude\u0020</string>
    <string name="longitude">Longitude\u0020</string>
    <string name="colon">:</string>
    <string name="incorrect_location_message">Your location is not correct.Please try again.</string>

    <string name="data_saved_uploaded">Data saved and uploaded successfully.</string>
    <string name="data_not_saved_message">Data not saved and uploaded.</string>
    <string name="data_saved_not_uploaded">Data saved but not uploaded.Try again later from synchronisation screen.</string>
    <string name="datadownload_mesage">Click the "Data Download" button to syncronise the data. This may take 5 to 10 minutes and you require an internet connection.</string>
    <string name="no_internet_connection">No internet.Try again later.</string>

</resources>